# NL2SQL

./: .gitignore  README.md  pyproject.toml
src/: app.py  sql_pipeline.py  utils.py
src/static/css/: style.css
src/static/js/: script.js
src/templates/: index.html  result.html
